# desktop-pet-ai

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
public/models/: README.md  active.example.json  characters.example.json
scripts/: setup-speech.ps1  setup.ps1
src/: App.vue  behavior.ts  main.ts  passthrough.ts  resources.ts  updater.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: bootstrap.rs  fileserver.rs  lib.rs  main.rs  scheduler.rs  selfdev.rs  vision.rs  watcher.rs  window.rs
src-tauri/src/agent/: mod.rs
src-tauri/src/llm/: keys.rs  mod.rs  provider.rs
src-tauri/src/memory/: mod.rs
src-tauri/src/speech/: mod.rs
src/chat/: ChatInput.vue  PermissionPrompt.vue  SpeechBubble.vue
src/live2d/: characters.ts  stage.ts
src/llm/: api.ts
src/settings/: SettingsPanel.vue
src/speech/: native.ts  recorder.ts  tts.ts
