[package]
name = "desktop-pet-ai"
version = "0.1.0"
description = "Live2D 桌面寵物 AI 助理(全本地運算)"
edition = "2021"

[lib]
name = "desktop_pet_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

# 注意:time 0.3.48 與 cookie 0.18.1 有 trait 衝突(E0119),Cargo.lock 釘在 time 0.3.47。
# 若 cargo update 後編譯爆 cookie/expiration.rs,執行:cargo update -p time --precise 0.3.47
[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
keyring = { version = "3", features = ["windows-native"] }
base64 = "0.22"
# M3 Agent:工具
tauri-plugin-clipboard-manager = "2"
tauri-plugin-opener = "2"
sysinfo = "0.33"
chrono = "0.4"
tokio = { version = "1", features = ["sync", "time"] }
# M4 記憶:SQLite(bundled 免外部相依)
rusqlite = { version = "0.32", features = ["bundled"] }
# Edge 神經網路語音(甜美聲線;斷網自動退回 Piper/系統語音)
msedge-tts = "0.2.5"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
